--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,26 +14,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="150dp"
-        android:text="MusicLive"
         android:gravity="center"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:text="MusicLive"
+        android:textColor="@android:color/black"
         android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="30sp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginBottom="15dp"
+        android:text="Login"
+        android:textColor="@android:color/black"
+        android:textSize="30sp" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/username_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
+        android:textColorHint="@android:color/black"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -53,8 +53,9 @@
         android:id="@+id/etPassWord_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
-        app:passwordToggleEnabled="true">
+        android:textColorHint="@android:color/black"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@android:color/black">
 
 
         <EditText
@@ -71,9 +72,8 @@
             android:hint="password"
             android:inputType="textPassword"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textColor="#020202"
             android:textSize="24sp" />
-
 
 
     </android.support.design.widget.TextInputLayout>
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:background="#020202"
         android:text="Sign In"
         android:textSize="18sp" />
 
@@ -96,7 +96,7 @@
         android:layout_marginTop="130dp"
         android:gravity="center"
         android:text="Don't have an account yet? Sing Up"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="#020202"
         android:textSize="18sp" />
 
 
