--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="100dp"
         android:text="MusicLive"
         android:gravity="center"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="#020202"
         android:textSize="30sp" />
 
     <TextView
@@ -24,14 +24,14 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="#020202"
         android:textSize="30sp"
         android:layout_marginBottom="15dp"/>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/name_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
+        android:textColorHint="#020202"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -51,7 +51,7 @@
         android:id="@+id/phone_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
+        android:textColorHint="#020202"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -71,7 +71,7 @@
         android:id="@+id/etEmail_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
+        android:textColorHint="#020202"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -91,7 +91,7 @@
         android:id="@+id/username_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
+        android:textColorHint="#020202"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -111,7 +111,7 @@
         android:id="@+id/etPassWord_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
+        android:textColorHint="#020202"
         app:passwordToggleEnabled="true">
 
 
@@ -129,7 +129,7 @@
             android:hint="password"
             android:inputType="textPassword"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textColor="#020202"
             android:textSize="24sp" />
 
 
@@ -142,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:background="@android:color/background_light"
         android:text="Sign Up"
         android:textSize="18sp" />
 
@@ -154,7 +154,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="You have an account yet? Sing In"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="#020202"
         android:textSize="18sp" />
 
 </LinearLayout>
