--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,17 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView3"
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="250dp"
+       >
+       <View
+           android:id="@+id/textView3"
+           android:layout_width="match_parent"
+           android:layout_height="210dp"
+           android:background="@drawable/back"
+           android:text="Profile" />
+
+       <ImageView
+           android:id="@+id/imageView"
+           android:layout_marginTop="120dp"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           tools:srcCompat="@tools:sample/avatars[13]" />
+
+   </RelativeLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
-        android:text="Profile" />
 
+        <TextView
+            android:id="@+id/tvUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Albert-Mary Dorce"
+            android:textSize="30sp" />
 
+        <TextView
+            android:id="@+id/tvNbreAbon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="5 Abonnes" />
 
+        <ImageView
+            android:id="@+id/ivEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    </LinearLayout>
 
 
 
