--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="120dp"
+           android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars[13]" />
