--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -2,20 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".EditProfileActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="250dp"
+        >
         <View
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="210dp"
             android:background="@drawable/back"
             android:text="Profile" />
+
         <LinearLayout
             android:layout_marginTop="120dp"
             android:layout_marginLeft="10dp"
@@ -23,11 +25,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
-            <ImageView
+            <TextView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars[13]" />
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                 />
 
             <ImageView
                 android:id="@+id/ivEditPicture"
@@ -39,13 +41,16 @@
                 app:srcCompat="@android:drawable/ic_menu_edit" />
 
         </LinearLayout>
+
+
     </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="25dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/name_text_input_layout"
@@ -121,7 +126,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="15dp"
-                android:hint="username"
+                android:hint="USERNAME"
                 android:textColor="#020202"
                 android:textSize="18sp" />
 
@@ -146,7 +151,7 @@
                 android:layout_marginBottom="15dp"
                 android:ems="10"
 
-                android:hint="password"
+                android:hint="PASSWORD"
                 android:inputType="textPassword"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="#020202"
@@ -157,16 +162,19 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/btnSignUp"
+            android:id="@+id/btnSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@android:color/background_light"
-            android:text="Sign Up"
+            android:text="Save Change"
             android:textSize="18sp" />
 
 
     </LinearLayout>
+
+
+
 
 </LinearLayout>
