--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,13 +17,13 @@
            android:background="@drawable/back"
            android:text="Profile" />
 
-       <ImageView
+       <TextView
            android:id="@+id/imageView"
-           android:layout_marginTop="120dp"
+           android:layout_width="70dp"
+           android:layout_height="70dp"
            android:layout_marginLeft="10dp"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           tools:srcCompat="@tools:sample/avatars[13]" />
+           android:layout_marginTop="120dp"
+           android:background="@drawable/ic_person_black_24dp" />
 
    </RelativeLayout>
 
